--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -4,14 +4,33 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Software Developer</h3>
-                            <div class="time">2018 - Present</div>
+                            <h3 class="job-title">Senior GIS Solutions Architect / Developer</h3>
+                            <div class="time">2022 - Present</div>
+                        </div><!--//upper-row-->
+                        <div class="company"><a href='https://aypa.com'>Aypa</a>, Austin</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                      <p>
+                        I currently work on a small GIS team in the Independent Power Producing & Renewable Energy sector, responsible for assisting with the management 
+                        and maintenance of ArcGIS Enterprise running on multiple AWS EC2 instances, managing the performance of SDE PostgreSQL geodatabases in 
+                        AWS RDS, Extract Transform and Load (ETL) workflows, external data integration, updates to production feature and web services, application 
+                        development, assisting internal users with the efficient of use of enterprise tools and applications, and a variety of othe responsibilities.
+                        Python is my main friend, but SQL is pretty important too.
+                      </p>
+                    </div><!--//details-->
+                </div><!--//item-->
+  
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">GIS Software Developer</h3>
+                            <div class="time">2018 - 2021</div>
                         </div><!--//upper-row-->
                         <div class="company">Texas Natural Resources Information System (TNRIS), Austin</div>
                     </div><!--//meta-->
                     <div class="details">
                       <p>
-                        Work on a small technical team responsible for developing, enhancing, and maintaining multiple web applications, technical tools, and
+                        I worked on a small technical team responsible for developing, enhancing, and maintaining multiple web applications, technical tools, and
                         cloud infrastructure in order to disseminate and visualize geospatial data for the citizens of Texas and beyond. Languages,
                         frameworks and tools include: JavaScript, Python, AWS (EC2, ECS, CodePipeline, Lambda, S3, and more), Linux, Node.js, Django, React.js,
                         Docker, Terraform, and more. Assist with team lead administrative duties when needed.
@@ -28,9 +47,10 @@
                         <div class="company">Texas Department of Transportation, Austin</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Served as the GIS coordinator for the 11 county Austin District responsible for geospatial data management, graphic design, GIS and
-                        technology training, web application development and maintenance, transportation planning, and analysis.</p>
-                        <p> </p>
+                        <p>
+                          Served as the GIS coordinator for the 11 county Austin District responsible for geospatial data management, graphic design, GIS and
+                          technology training, web application development and maintenance, transportation planning, and analysis.
+                        </p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -43,8 +63,10 @@
                         <div class="company">Texas Department of Public Safety, Austin</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Geospatial analysis for the Highway Safety Operations Center using data derived from the TxDOT Crash Records Information System
-                        (CRIS).</p>
+                        <p>
+                          Geospatial analysis for the Highway Safety Operations Center using data derived from the TxDOT Crash Records Information System
+                          (CRIS).
+                        </p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -57,11 +79,13 @@
                         <div class="company">Railroad Commission of Texas, Austin</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Sole GIS professional in the Surface Mining &amp; Reclamation division responsible for all data management of mine permits and
+                        <p>
+                          Sole GIS professional in the Surface Mining &amp; Reclamation division responsible for all data management of mine permits and
                           related environmental geospatial data across the state. Developed a geospatial data management plan for the division to achieve
                           a more organized work flow, central data repository, uniform geodatabase schema, and data integrity and interoperability
                           standards. Developed programs, user interfaces, python scripts, and geoprocessing models to meet user needs and expedite work
-                          flows. Responsible for all new software installation and distribution within the division.</p>
+                          flows. Responsible for all new software installation and distribution within the division.
+                        /p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -74,11 +98,13 @@
                         <div class="company">United States Army</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Conducted geospatial analysis using primarily ArcGIS for line of sight analysis, slope and terrain analysis, cartographic production,
+                        <p>
+                          Conducted geospatial analysis using primarily ArcGIS for line of sight analysis, slope and terrain analysis, cartographic production,
                           editing and creating vector features and raster surfaces, geo-referencing images, tabular data manipulation, 3D analysis, and
                           graphic design. Deciphered, analyzed, cross-referenced, and disseminated intelligence received from a variety of sources in order to
                           facilitate leadership decision making. Supervised and assisted troops consisting of trouble shooting GIS issues and quality
-                          control of analytical products.</p>
+                          control of analytical products.
+                        </p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -91,11 +117,13 @@
                         <div class="company">Fugro, Houston</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Utilized the ArcGIS suite in combination with Geosoft Montaj software to create high quality gravity and magnetic surfaces and cartographic
+                        <p>
+                          Utilized the ArcGIS suite in combination with Geosoft Montaj software to create high quality gravity and magnetic surfaces and cartographic
                           deliverables for clients in oil and gas exploration. Processed geophysical data collected from both aerial and marine assets for client use in
                           potential fields analyses. Researched new technologies and methodologies to benefit GIS products. Documented internal GIS methods and developments.
                           Created, edited, organized, and optimized geodatabases for delivery to the client. Maintained familiarity with worldwide coordinate systems,
-                          projections, and proper spatial data transformations.</p>
+                          projections, and proper spatial data transformations.
+                        </p>
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -108,8 +136,10 @@
                         <div class="company">City of San Marcos, San Marcos</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Routine GIS duties with ArcGIS including editing, creating, and quality control of geospatial water/waste water infrastructure features within
-                          an enterprise versioned environment. Performed database entries into large legacy excel files for import into ArcSDE.</p>
+                        <p>
+                          Routine GIS duties with ArcGIS including editing, creating, and quality control of geospatial water/waste water infrastructure features within
+                          an enterprise versioned environment. Performed database entries into large legacy excel files for import into ArcSDE.
+                        </p>
                     </div><!--//details-->
                 </div><!--//item-->
 
