--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -12,10 +12,9 @@
                     <div class="details">
                       <p>
                         I currently work on a small GIS team in the Independent Power Producing & Renewable Energy sector, responsible for assisting with the management 
-                        and maintenance of ArcGIS Enterprise running on multiple AWS EC2 instances, managing the performance of SDE PostgreSQL geodatabases in 
+                        and maintenance of ArcGIS Enterprise running on multiple AWS EC2 instances, the performance of SDE PostgreSQL geodatabases in 
                         AWS RDS, Extract Transform and Load (ETL) workflows, external data integration, updates to production feature and web services, application 
-                        development, assisting internal users with the efficient of use of enterprise tools and applications, and a variety of othe responsibilities.
-                        Python is my main friend, but SQL is pretty important too.
+                        development, assisting users with the efficient use of applications and Portal tools, and a variety of other responsibilities. Python is my best bud.
                       </p>
                     </div><!--//details-->
                 </div><!--//item-->
