--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -1,10 +1,11 @@
 <div class="interests-container container-block">
 <h2 class="container-block-title">Interests</h2>
 <ul class="list-unstyled interests-list">
-<li>Travel</li>
-<li>Music</li>
-<li>Technology</li>
-<li>Hiking</li>
-<li>Mountain Biking</li>
+  <li>Music</li>
+  <li>Travel</li>
+  <li>Technology</li>
+  <li>Hunting</li>
+  <li>Mountain Biking</li>
+  <li>Just being outdoors</li>
 </ul>
 </div><!--//interests-->
