--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -91,18 +91,17 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Intelligence Analyst</h3>
+                            <h3 class="job-title">Intelligence Analyst (35F)</h3>
                             <div class="time">2010 - 2013</div>
                         </div><!--//upper-row-->
-                        <div class="company">United States Army</div>
+                        <div class="company">United States Army, Various Locations</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>
-                          Conducted geospatial analysis using primarily ArcGIS for line of sight analysis, slope and terrain analysis, cartographic production,
-                          editing and creating vector features and raster surfaces, geo-referencing images, tabular data manipulation, 3D analysis, and
-                          graphic design. Deciphered, analyzed, cross-referenced, and disseminated intelligence received from a variety of sources in order to
-                          facilitate leadership decision making. Supervised and assisted troops consisting of trouble shooting GIS issues and quality
-                          control of analytical products.
+                          Active duty enlisted soldier doing various work related to intelligence gathering to include: geospatial analysis using primarily ArcGIS 
+                          for line of sight analysis, slope and terrain analysis, cartographic production, editing and creating vector features and raster surfaces, 
+                          geo-referencing images, tabular data manipulation, 3D analysis, and graphic design. Deciphered, analyzed, cross-referenced, and disseminated 
+                          intelligence received from a variety of sources in order to facilitate leadership decision making. Two deployments to Afghanistan totaling ~13 months.
                         </p>
                     </div><!--//details-->
                 </div><!--//item-->
