--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -7,7 +7,7 @@
                             <h3 class="job-title">Senior GIS Solutions Architect / Developer</h3>
                             <div class="time">2022 - Present</div>
                         </div><!--//upper-row-->
-                        <div class="company"><a href='https://aypa.com'>Aypa</a>, Austin</div>
+                        <div class="company"><a href='https://aypa.com' target='_blank'>Aypa</a>, Austin</div>
                     </div><!--//meta-->
                     <div class="details">
                       <p>
