--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -11,10 +11,11 @@
                     </div><!--//meta-->
                     <div class="details">
                       <p>
-                        I currently work on a small GIS team in the Independent Power Producing & Renewable Energy sector, responsible for assisting with the management 
-                        and maintenance of ArcGIS Enterprise running on multiple AWS EC2 instances, the performance of SDE PostgreSQL geodatabases in 
-                        AWS RDS, Extract Transform and Load (ETL) workflows, external data integration, updates to production feature and web services, application 
-                        development, assisting users with the efficient use of applications and Portal tools, and a variety of other responsibilities. Python is my best bud.
+                        I currently work on a small GIS team in the Renewable Energy sector. I'm responsible for assisting with the management and maintenance of 
+                        ArcGIS Enterprise running on multiple AWS EC2 instances, the performance of SDE PostgreSQL geodatabases in AWS RDS, ETL workflows, external 
+                        data integration, updates to production feature and web services, application development, assisting users with the efficient use of applications 
+                        and Portal tools, and a variety of other responsibilities. Mostly writing Python these days, with a little JavaScript and Arcade in there as well,
+                        and of course always SQL.
                       </p>
                     </div><!--//details-->
                 </div><!--//item-->
@@ -29,7 +30,7 @@
                     </div><!--//meta-->
                     <div class="details">
                       <p>
-                        I worked on a small technical team responsible for developing, enhancing, and maintaining multiple web applications, technical tools, and
+                        Worked on a small technical team responsible for developing, enhancing, and maintaining multiple web applications, technical tools, and
                         cloud infrastructure in order to disseminate and visualize geospatial data for the citizens of Texas and beyond. Languages,
                         frameworks and tools include: JavaScript, Python, AWS (EC2, ECS, CodePipeline, Lambda, S3, and more), Linux, Node.js, Django, React.js,
                         Docker, Terraform, and more. Assist with team lead administrative duties when needed.
@@ -40,14 +41,14 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">GIS Analyst III</h3>
+                            <h3 class="job-title">GIS Coordinator</h3>
                             <div class="time">2016 - 2018</div>
                         </div><!--//upper-row-->
                         <div class="company">Texas Department of Transportation, Austin</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>
-                          Served as the GIS coordinator for the 11 county Austin District responsible for geospatial data management, graphic design, GIS and
+                          Served as the GIS subject matter expert for the 11 county Austin District. Responsible for geospatial data management, graphic design, GIS and
                           technology training, web application development and maintenance, transportation planning, and analysis.
                         </p>
                     </div><!--//details-->
@@ -64,7 +65,7 @@
                     <div class="details">
                         <p>
                           Geospatial analysis for the Highway Safety Operations Center using data derived from the TxDOT Crash Records Information System
-                          (CRIS).
+                          (CRIS). Introduced modern approaches to mapping with interactive maps and applications versus static powerpoint slides and pdfs.
                         </p>
                     </div><!--//details-->
                 </div><!--//item-->
@@ -83,7 +84,7 @@
                           related environmental geospatial data across the state. Developed a geospatial data management plan for the division to achieve
                           a more organized work flow, central data repository, uniform geodatabase schema, and data integrity and interoperability
                           standards. Developed programs, user interfaces, python scripts, and geoprocessing models to meet user needs and expedite work
-                          flows. Responsible for all new software installation and distribution within the division.
+                          flows. Responsible for new software installation and distribution within the division.
                         /p>
                     </div><!--//details-->
                 </div><!--//item-->
