--- a/_includes/interests.html
+++ b/_includes/interests.html
@@ -3,9 +3,9 @@
 <ul class="list-unstyled interests-list">
   <li>Music</li>
   <li>Travel</li>
-  <li>Technology</li>
   <li>Hunting</li>
+  <li>Camping</li>
   <li>Mountain Biking</li>
-  <li>Just being outdoors</li>
+  <li>Hiking</li>
 </ul>
 </div><!--//interests-->
